--- a/freelancer_website.css
+++ b/freelancer_website.css
@@ -158,7 +158,7 @@ hr{
 
 #gallery-services {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    grid-template-columns: 1fr 1fr;
     gap: 1.5rem;
     padding: 1.5rem;
     max-width: 1000px;  
